[package]
name = "spor-python"
version = "0.1.0"
authors = ["Austin Bingham <austin.bingham@gmail.com>"]
edition = "2018"

[lib]
name = "spor"
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.4"
serde_yaml = "0.8.11"

[dependencies.spor]
path = "../spor"

[dependencies.cpython]
version = "0.5"
features = ["extension-module"]

[package.metadata.maturin]
classifier = ["Programming Language :: Python"]
maintainer = "Austin Bingham"
maintainer-email = "austin.bingham@gmail.com"
project-url = ["https://github.com/abingham/spor-python"]