[package]
name = "spor-python"
version = "1.1.0"
authors = ["Austin Bingham <austin.bingham@gmail.com>"]
edition = "2018"

[lib]
name = "spor"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.9.2"
features = ["extension-module"]

[dependencies]
futures = "0.3.4"
serde_yaml = "0.8.11"

[dependencies.spor]
path = "../spor"

[package.metadata.maturin]
classifier = ["Programming Language :: Python"]
maintainer = "Austin Bingham"
maintainer-email = "austin.bingham@gmail.com"
project-url = ["https://github.com/abingham/spor-python"]
requires-dist = ["pyyaml"]